--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -275,7 +275,6 @@
   <string name="DeviceListItem_last_active_s">Son aktiv olan - %s</string>
   <string name="DeviceListItem_today">Bu gün</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Naməlum fayl</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Çatışmayan Play Servisləri üçün optimallaşdır</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Bu cihaz Play Servisi dəstəkləmir. Qeyri aktiv vaxtlarda Signal-ın mesajları bərpa edə bilməsinin qarşısını almaq üçün sistem akkumulyator optimallaşdırılmasını deaktivə et.</string>
@@ -377,11 +376,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">Telsiz provayder MMS parametrlərinin oxunmasında xəta</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
+  <string name="MediaOverviewActivity_Audio">Səs</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Silinir</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mesajların silinməsi…</string>
   <string name="MediaOverviewActivity_Select_all">Hamısını seç</string>
   <string name="MediaOverviewActivity_collecting_attachments">Faylların toplanması…</string>
-  <string name="MediaOverviewActivity_Audio">Səs</string>
+  <string name="MediaOverviewActivity_file">Fayl</string>
+  <string name="MediaOverviewActivity_audio">Səs</string>
+  <string name="MediaOverviewActivity_video">Video</string>
+  <string name="MediaOverviewActivity_image">Şəkil</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal zəngi baş verməkdədir</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal zəngi hazırlanır</string>
