--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -332,7 +332,6 @@ Send neges heb ei ddiogelu?</string>
   <string name="DeviceListItem_last_active_s">Gweithgar diwethaf %s</string>
   <string name="DeviceListItem_today">Heddiw</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Ffeil anhysbys</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimeiddio ar gyfer Play Services coll</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Nid yw\'r ddyfais hon yn cefnogi Play Services Tapiwch i analluogi gwelliannau batri system sy\'n atal Signal rhag adfer negeseuon tra\'n anweithredol.</string>
@@ -438,11 +437,15 @@ Send neges heb ei ddiogelu?</string>
   <string name="MmsDownloader_error_reading_mms_settings">Gwall wrth ddarllen gosodiadau darparwr MMS diwifr</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Cyfryngau</string>
+  <string name="MediaOverviewActivity_Audio">Sain</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Wrthi\'n dileu</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dileu negeseuon…</string>
   <string name="MediaOverviewActivity_Select_all">Dewis popeth</string>
   <string name="MediaOverviewActivity_collecting_attachments">Casglu atodiadau…</string>
-  <string name="MediaOverviewActivity_Audio">Sain</string>
+  <string name="MediaOverviewActivity_file">Ffeil</string>
+  <string name="MediaOverviewActivity_audio">Sain</string>
+  <string name="MediaOverviewActivity_video">Fideo</string>
+  <string name="MediaOverviewActivity_image">Llun</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Ar ganol galwad Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Sicrhau galwad Signal</string>
