--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -300,7 +300,6 @@
   <string name="DeviceListItem_last_active_s">Azken konexioa: %s</string>
   <string name="DeviceListItem_today">Gaur</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Artxibo ezezaguna</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizatu Google Play-ren zerbitzuetarko</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Gailu honek ez dauka Play Services erabiltzerik. Signal ezgaituta dagoenean, sistemaren bateria optimizazioek galarazten diote mezuak jasotzea. Ukitu sistemaren bateria optimizazioak ezgaitzeko.</string>
@@ -402,11 +401,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">Errorea hari gabeko hornitzailearen MMS ezarpenak irakurtzerakoan</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimedia</string>
+  <string name="MediaOverviewActivity_Audio">Audioa</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Ezabatzen</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mezuak ezabatzen…</string>
   <string name="MediaOverviewActivity_Select_all">Denak hautatu</string>
   <string name="MediaOverviewActivity_collecting_attachments">Eranskinak biltzen…</string>
-  <string name="MediaOverviewActivity_Audio">Audioa</string>
+  <string name="MediaOverviewActivity_file">Artxiboa</string>
+  <string name="MediaOverviewActivity_audio">Audioa</string>
+  <string name="MediaOverviewActivity_video">Bideoa</string>
+  <string name="MediaOverviewActivity_image">Irudia</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Uneko Signal deia</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal deia finkatzen</string>
