--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -305,11 +305,7 @@
   <string name="DeviceListItem_last_active_s">آخرین فعالیت %s</string>
   <string name="DeviceListItem_today">امروز</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">فایل ناشناخته</string>
   <string name="DocumentView_unnamed_file">فایل بدون نام</string>
-  <string name="DocumentView_audio_file">فایل صوتی</string>
-  <string name="DocumentView_image_file">فایل عکس</string>
-  <string name="DocumentView_video_file">فایل ویدئویی</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">بهینه‌سازی برای جایگزینی سرویس Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">موبایل شما از سرویس Play پشتیبانی نمی‌کند. برای غیرفعال کردن سیستم بهینه‌سازی باتری که هنگامی که Signal غیرفعال است، از دریافت پیام‌ها جلوگیری می‌کند، ضربه بزنید.</string>
@@ -413,6 +409,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">خطا در هنگام دریافت تنظیمات MMS اپراتور تلفن همراه</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">رسانه</string>
+  <string name="MediaOverviewActivity_Files">فایل‌ها</string>
+  <string name="MediaOverviewActivity_Audio">صوت</string>
+  <string name="MediaOverviewActivity_All">همه</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
     <item quantity="one">پیام انتخابی حذف شود؟</item>
     <item quantity="other">پیام‌های انتخابی حذف شوند؟</item>
@@ -423,11 +422,8 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">در حال حذف</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">حذف پیام های…</string>
-  <string name="MediaOverviewActivity_Files">فایل‌ها</string>
   <string name="MediaOverviewActivity_Select_all">انتخاب همه</string>
   <string name="MediaOverviewActivity_collecting_attachments">در حال جمع‌آوری پیوست‌ها…</string>
-  <string name="MediaOverviewActivity_Audio">صوت</string>
-  <string name="MediaOverviewActivity_All">همه</string>
   <string name="MediaOverviewActivity_Sort_by">مرتب‌سازی بر اساس</string>
   <string name="MediaOverviewActivity_Newest">جدیدترین</string>
   <string name="MediaOverviewActivity_Oldest">قدیمی‌ترین</string>
@@ -436,6 +432,10 @@
   <string name="MediaOverviewActivity_Grid_view_description">نمای مشبک</string>
   <string name="MediaOverviewActivity_List_view_description">نمای فهرستی</string>
   <string name="MediaOverviewActivity_Selected_description">انتخاب شده</string>
+  <string name="MediaOverviewActivity_file">فایل</string>
+  <string name="MediaOverviewActivity_audio">صدا</string>
+  <string name="MediaOverviewActivity_video">ویدیو</string>
+  <string name="MediaOverviewActivity_image">تصویر</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">پاسخ Signal در حال انجام</string>
   <string name="NotificationBarManager__establishing_signal_call">در حال برقراری يک تماس سيگنالی</string>
