--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -302,7 +302,6 @@
   <string name="DeviceListItem_last_active_s">अंतिम सक्रिय %s</string>
   <string name="DeviceListItem_today">आज</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">अज्ञात फ़ाइल</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">लापता प्ले सेवाओं के लिए अनुकूलित करें</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">यह डिवाइस Play सेवाओं का समर्थन नहीं करता है। सिस्टम बैटरी ऑप्टिमाइज़ेशन को अक्षम करने के लिए टैप करें, जो निष्क्रिय होने पर संदेशों को पुनर्प्राप्त करने से Signal को रोकता है।</string>
@@ -404,11 +403,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">वायरलेस प्रदाता SMS सेटिंग्स पढ़ने में त्रुटि</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">मीडिया</string>
+  <string name="MediaOverviewActivity_Audio">ऑडियो</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">हटाना</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">मेसेज हटाए जा रहे हैं</string>
   <string name="MediaOverviewActivity_Select_all">सभी को चुन लो</string>
   <string name="MediaOverviewActivity_collecting_attachments">अटैचमेंट्स सहेज रहें हैं</string>
-  <string name="MediaOverviewActivity_Audio">ऑडियो</string>
+  <string name="MediaOverviewActivity_file">फ़ाइल</string>
+  <string name="MediaOverviewActivity_audio">ऑडियो</string>
+  <string name="MediaOverviewActivity_video">वीडियो</string>
+  <string name="MediaOverviewActivity_image">छवि</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal कॉल प्रगति पर है</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal कॉल की स्थापना की जा रही है</string>
