--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -263,7 +263,6 @@
   <string name="DeviceListItem_last_active_s">최근 사용: %s</string>
   <string name="DeviceListItem_today">오늘</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">알려지지 않은 파일</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Play Services를 찾을 수 없음</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">이 기기는 Play Services를 지원하지 않습니다. 시스템 내장 배터리 최적화 기능으로 인해 Signal을 사용하지 않을 때 메시지를 받지 못할 수 있습니다. 배터리 최적화를 끄려면 여기를 탭하세요.</string>
@@ -363,11 +362,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">이동통신사 MMS 설정 읽기 오류 발생</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">매체</string>
+  <string name="MediaOverviewActivity_Audio">오디오</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">이전 메시지 삭제</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">메시지를 삭제 중…</string>
   <string name="MediaOverviewActivity_Select_all">모두 선택</string>
   <string name="MediaOverviewActivity_collecting_attachments">첨부파일 저장 준비 중…</string>
-  <string name="MediaOverviewActivity_Audio">오디오</string>
+  <string name="MediaOverviewActivity_file">파일</string>
+  <string name="MediaOverviewActivity_audio">오디오</string>
+  <string name="MediaOverviewActivity_video">비디오</string>
+  <string name="MediaOverviewActivity_image">이미지</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal 통화 중</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal 통화 연결 중</string>
