--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -302,7 +302,6 @@
   <string name="DeviceListItem_last_active_s">%s शेवटचा सक्रिय</string>
   <string name="DeviceListItem_today">आज</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">अज्ञात फाईल</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">नसलेल्या प्ले सेवांकरिता ऑप्टीमाईझ करा</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">हा डिव्हाईस प्ले सेवांचे समर्थन करत नाही. निष्क्रिय असल्यावर संदेश पुनर्प्राप्त करताना अवरोधित करणारे सिस्टिम बॅटरी ऑप्टीमाईझेशन अक्षम करण्यासाठी टॅप करा.</string>
@@ -404,11 +403,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">वायरलेस प्रदाता MMS सेटिंग वाचण्यात त्रुटी</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">मीडिया</string>
+  <string name="MediaOverviewActivity_Audio">ऑडिओ</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">हटवत आहे</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">संदेश हटवत आहे…</string>
   <string name="MediaOverviewActivity_Select_all">सर्व निवडा</string>
   <string name="MediaOverviewActivity_collecting_attachments">संलग्न गोळा करत आहे…</string>
-  <string name="MediaOverviewActivity_Audio">ऑडिओ</string>
+  <string name="MediaOverviewActivity_file">फाईल</string>
+  <string name="MediaOverviewActivity_audio">ऑडिओ</string>
+  <string name="MediaOverviewActivity_video">व्हिडिओ</string>
+  <string name="MediaOverviewActivity_image">चित्र</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal कॉल प्रगती मध्ये</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal कॉल प्रस्थापित करत आहे</string>
