--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -288,7 +288,6 @@
   <string name="DeviceListItem_last_active_s">Kali terakhir aktif %s</string>
   <string name="DeviceListItem_today">Hari ini</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Fail tidak diketahui</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimumkan untuk ketiadaan Perkhidmatan Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Peranti ini tidak menyokong Perkhidmatan Play. Ketik untuk menyahdayakan pengoptimuman bateri sistem yang menghalang Signal daripada mengambil mesej semasa tidak aktif.
@@ -390,11 +389,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">Ralat membaca pembekal wayarles penetapan MMS</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
+  <string name="MediaOverviewActivity_Audio">Audio</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Memadam</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Memadam mesej…</string>
   <string name="MediaOverviewActivity_Select_all">Pilih semua</string>
   <string name="MediaOverviewActivity_collecting_attachments">Mengumpul lampiran…</string>
-  <string name="MediaOverviewActivity_Audio">Audio</string>
+  <string name="MediaOverviewActivity_file">Fail</string>
+  <string name="MediaOverviewActivity_audio">Audio</string>
+  <string name="MediaOverviewActivity_video">Video</string>
+  <string name="MediaOverviewActivity_image">Imej</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Panggilan Signal sedang berjalan</string>
   <string name="NotificationBarManager__establishing_signal_call">Mewujudkan panggilan Signal</string>
