--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -267,7 +267,6 @@
   <string name="DeviceListItem_last_active_s">%s ကသုံးနေသည် </string>
   <string name="DeviceListItem_today">ယနေ့ </string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">အမျိုးအစားမသိဖိုင်</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">မပါရှိသေးသော Play Service များကို  ရှာဖွေပါ </string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">ဤဖုန်းသည် Play Services အသုံးပြု၍မရပါ။ Signal အသုံးမပြုသည့်အချိန်တွင် သတင်းစကားများပြန်လည် ထုတ်ယူရာတွင် အနှောက်အယှက်ပြုသည့်အတွက် ဘက်ထရီ အသုံးပြုမှုစောင့် ကြည့်သည့်စနစ်ကို ပိတ်ထားပေးပါ။ </string>
@@ -355,11 +354,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">အင်တာနက်ဝန်ဆောင်မှုမှ MMS အပြင်အဆင်များ ဖတ်၍မရပါ</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">ရုပ်၊သံ၊ပုံ များ</string>
+  <string name="MediaOverviewActivity_Audio">အသံ</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">ဖျက်နေဆဲ</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">စာများဖျက်နေသည်</string>
   <string name="MediaOverviewActivity_Select_all">အားလုံးကို ရွေးပါ</string>
   <string name="MediaOverviewActivity_collecting_attachments">ပူးတွဲဖိုင်များကို စုစည်းနေသည် </string>
-  <string name="MediaOverviewActivity_Audio">အသံ</string>
+  <string name="MediaOverviewActivity_file">ဖိုင်</string>
+  <string name="MediaOverviewActivity_audio">အသံ</string>
+  <string name="MediaOverviewActivity_video">ရုပ်မြင်သံကြား</string>
+  <string name="MediaOverviewActivity_image">ရုပ်ပုံ</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal ဖုန်းခေါ်နေသည်</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal ဖုန်းခေါ်ဆိုမှုစတင်နေသည်</string>
