--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -300,7 +300,6 @@
   <string name="DeviceListItem_last_active_s">%sਆਖਰੀ ਸਕ੍ਰਿਅ </string>
   <string name="DeviceListItem_today">ਅੱਜ </string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">ਅਗਿਆਤ ਫਾਈਲ</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">ਗੁਮੀਆਂ ਪਲੇ ਸਰਵਿਸਜ਼ ਨੂੰ ਅਨੁਕੂਲ ਬਣਾਉ </string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">ਇਹ ਡਿਵਾਈਸ ਪਲੇ ਸੇਵਾਵਾਂ ਦਾ ਸਮਰਥਨ ਨਹੀਂ ਕਰਦੀ. ਸਿਸਟਮ ਬੈਟਰੀ ਅਨੁਕੂਲਤਾ ਨੂੰ ਅਸਮਰੱਥ ਬਣਾਉਣ ਲਈ ਟੈਪ ਕਰੋ ਜੋ ਕਿ Signal ਨੂੰ ਨਾ-ਸਰਗਰਮ ਹੋਣ ਵੇਲੇ ਸੁਨੇਹਿਆਂ ਨੂੰ ਮੁੜ ਪ੍ਰਾਪਤ ਕਰਨ ਤੋਂ ਰੋਕਦੇ ਹਨ.</string>
@@ -402,11 +401,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">ਵਾਇਰਲੈਸ ਪ੍ਰਦਾਤਾ ਐੱਮ ਐੱਮ ਐੱਸ ਸੈਟਿੰਗਜ਼ ਨੂੰ ਪੜ੍ਹਨ ਵਿੱਚ ਗਲਤੀ</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">ਮੀਡੀਆ</string>
+  <string name="MediaOverviewActivity_Audio">ਆਡੀਓ</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">ਮਿਟਾਇਆ ਜਾ ਰਿਹਾ ਹੈ</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">ਸੁਨੇਹਿਆਂ ਨੂੰ ਮਿਟਾਇਆ ਜਾ ਰਿਹਾ ਹੈ</string>
   <string name="MediaOverviewActivity_Select_all">ਸਾਰਿਆ ਨੂੰ ਚੁਣੋ</string>
   <string name="MediaOverviewActivity_collecting_attachments">ਅਟੈਚਮੈਂਟ ਇਕੱਠੇ ਕਰਨੇ …</string>
-  <string name="MediaOverviewActivity_Audio">ਆਡੀਓ</string>
+  <string name="MediaOverviewActivity_file">ਫਾਇਲ</string>
+  <string name="MediaOverviewActivity_audio">ਆਡੀਓ</string>
+  <string name="MediaOverviewActivity_video">ਵੀਡੀਓ</string>
+  <string name="MediaOverviewActivity_image">ਤਸਵੀਰ</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal ਕਾਲ ਪ੍ਰਗਤੀ ਵਿੱਚ ਹੈ</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal ਕਾਲ ਸਥਾਪਤ ਕਰ ਰਿਹਾ ਹੈ</string>
