--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -333,11 +333,7 @@
   <string name="DeviceListItem_last_active_s">Ostatnio aktywny %s</string>
   <string name="DeviceListItem_today">Dzisiaj</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Nieznany plik</string>
   <string name="DocumentView_unnamed_file">Plik bez nazwy</string>
-  <string name="DocumentView_audio_file">Plik audio</string>
-  <string name="DocumentView_image_file">Plik obrazu</string>
-  <string name="DocumentView_video_file">Plik wideo</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optymalizacja dla brakujących Usług Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Urządzenie nie wspiera Usług Play. Dotknij, aby wyłączyć systemową optymalizację baterii uniemożliwiającą odbieranie wiadomości w czasie braku aktywności.</string>
@@ -445,6 +441,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">Błąd odczytu ustawień MMS operatora</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimedia</string>
+  <string name="MediaOverviewActivity_Files">Pliki</string>
+  <string name="MediaOverviewActivity_Audio">Dźwięk</string>
+  <string name="MediaOverviewActivity_All">Wszystko</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
     <item quantity="one">Usunąć zaznaczony element? </item>
     <item quantity="few">Usunąć zaznaczone elementy?</item>
@@ -459,11 +458,8 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Usuwanie</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Usuwanie wiadomości…</string>
-  <string name="MediaOverviewActivity_Files">Pliki</string>
   <string name="MediaOverviewActivity_Select_all">Zaznacz wszystko</string>
   <string name="MediaOverviewActivity_collecting_attachments">Zbieranie załączników…</string>
-  <string name="MediaOverviewActivity_Audio">Dźwięk</string>
-  <string name="MediaOverviewActivity_All">Wszystko</string>
   <string name="MediaOverviewActivity_Sort_by">Sortuj według</string>
   <string name="MediaOverviewActivity_Newest">Najnowsze</string>
   <string name="MediaOverviewActivity_Oldest">Najstarsze</string>
@@ -472,6 +468,14 @@
   <string name="MediaOverviewActivity_Grid_view_description">Widok siatki</string>
   <string name="MediaOverviewActivity_List_view_description">Widok listy</string>
   <string name="MediaOverviewActivity_Selected_description">Zaznaczono</string>
+  <string name="MediaOverviewActivity_file">Plik</string>
+  <string name="MediaOverviewActivity_audio">Dźwięk</string>
+  <string name="MediaOverviewActivity_video">Wideo</string>
+  <string name="MediaOverviewActivity_image">Obraz</string>
+  <string name="MediaOverviewActivity_sent_by_s">Wysłano przez %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Wysłano przez Ciebie</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">Wysłano przez %1$s do %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Wysłano przez Ciebie do %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Połączenie Signal w toku</string>
   <string name="NotificationBarManager__establishing_signal_call">Nawiązywanie połączenia Signal</string>
@@ -1551,7 +1555,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="MessageRequestProfileView_member_of_one_group">Członek %1$s</string>
   <string name="MessageRequestProfileView_member_of_two_groups">Członek %1$s i %2$s</string>
   <string name="MessageRequestProfileView_member_of_many_groups">Członek %1$s, %2$s i %3$s</string>
-  <string name="MessageRequestProfileView_members">%1$d użytkowników</string>
+  <string name="MessageRequestProfileView_members">%1$d użytkownik(ów)</string>
   <plurals name="MessageRequestProfileView_member_of_others">
     <item quantity="one">%d inna</item>
     <item quantity="few">%d inne</item>
