--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -300,7 +300,6 @@
   <string name="DeviceListItem_last_active_s">Último ativo %s</string>
   <string name="DeviceListItem_today">Hoje</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Arquivo desconhecido</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Otimizar para ausência do Serviços Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Este dispositivo não tem suporte para o Serviços Play. Clique para desabilitar as otimizações sistêmicas de bateria que impedem o Signal de receber mensagens enquanto está inativo.</string>
@@ -402,11 +401,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">Erro ao ler configuracoes de MMS do provedor sem fio </string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Mídia</string>
+  <string name="MediaOverviewActivity_Audio">Áudio</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Excluindo</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Excluindo mensagens…</string>
   <string name="MediaOverviewActivity_Select_all">Marcar todos</string>
   <string name="MediaOverviewActivity_collecting_attachments">Coletando anexos…</string>
-  <string name="MediaOverviewActivity_Audio">Áudio</string>
+  <string name="MediaOverviewActivity_file">Arquivo</string>
+  <string name="MediaOverviewActivity_audio">Áudio</string>
+  <string name="MediaOverviewActivity_video">Vídeo</string>
+  <string name="MediaOverviewActivity_image">Imagem</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chamada Signal em andamento</string>
   <string name="NotificationBarManager__establishing_signal_call">Estabelecendo uma ligação via Signal</string>
