--- a/res/values-qu-rEC/strings.xml
+++ b/res/values-qu-rEC/strings.xml
@@ -260,7 +260,6 @@
   <string name="DeviceListItem_last_active_s">Kay pachakaman pakta karka %s</string>
   <string name="DeviceListItem_today">Kunan</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Mana riksishka panka</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Google Play mana yanapay paktaymanta ashtawan allichipay</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Kay antahillayka mana Google Play yanapayta chaski ushanchu. Kaypi llapishpa riti mirachita anchuchi, Signal chaskita ushachun kikin na internetpi kakpipash.</string>
@@ -347,10 +346,14 @@
   <string name="MmsDownloader_error_reading_mms_settings">Internetpa MMS configuracionta mana killkakatita usharinchu</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Uyayrikuchikkuna</string>
+  <string name="MediaOverviewActivity_Audio">Uyariy</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Pichakun</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Chaskikunata pichakun…</string>
   <string name="MediaOverviewActivity_Select_all">Tukuyta akllana</string>
-  <string name="MediaOverviewActivity_Audio">Uyariy</string>
+  <string name="MediaOverviewActivity_file">Panka </string>
+  <string name="MediaOverviewActivity_audio">Uyariy</string>
+  <string name="MediaOverviewActivity_video">Shuyukuyuriy</string>
+  <string name="MediaOverviewActivity_image">Shuyu</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Kay pachapi Signal kayachikun</string>
   <string name="NotificationBarManager__establishing_signal_call">Signalpi kayachita rurarikun</string>
