--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -319,11 +319,7 @@
   <string name="DeviceListItem_last_active_s">Ultima oară activ %s</string>
   <string name="DeviceListItem_today">Azi</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Fișier necunoscut</string>
   <string name="DocumentView_unnamed_file">Fișier fără nume</string>
-  <string name="DocumentView_audio_file">Fișier audio</string>
-  <string name="DocumentView_image_file">Fișier imagine</string>
-  <string name="DocumentView_video_file">Fișier video</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizează pentru lipsa serviciilor Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Acest dispozitiv nu suportă serviciile Play. Apasă pentru a dezactiva optimizarea de sistem a bateriei care împiedică Signal să preia mesajele cât timp este inactivă.</string>
@@ -429,6 +425,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">Eroare la citirea setărilor MMS ale operatorului wireless</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
+  <string name="MediaOverviewActivity_Files">Fișiere</string>
+  <string name="MediaOverviewActivity_Audio">Audio</string>
+  <string name="MediaOverviewActivity_All">Toate</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
     <item quantity="one">Ștergeți elementul selectat?</item>
     <item quantity="few">Ștergeți elementul selectat?</item>
@@ -441,11 +440,8 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Se șterge</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Se șterg mesajele…</string>
-  <string name="MediaOverviewActivity_Files">Fișiere</string>
   <string name="MediaOverviewActivity_Select_all">Selectează tot</string>
   <string name="MediaOverviewActivity_collecting_attachments">Se colectează atașamentele…</string>
-  <string name="MediaOverviewActivity_Audio">Audio</string>
-  <string name="MediaOverviewActivity_All">Toate</string>
   <string name="MediaOverviewActivity_Sort_by">Sortează după</string>
   <string name="MediaOverviewActivity_Newest">Noi</string>
   <string name="MediaOverviewActivity_Oldest">Vechi</string>
@@ -454,6 +450,10 @@
   <string name="MediaOverviewActivity_Grid_view_description">Vizualizare grilă</string>
   <string name="MediaOverviewActivity_List_view_description">Vizualizare listă</string>
   <string name="MediaOverviewActivity_Selected_description">Selectat</string>
+  <string name="MediaOverviewActivity_file">Fișier</string>
+  <string name="MediaOverviewActivity_audio">Audio</string>
+  <string name="MediaOverviewActivity_video">Video</string>
+  <string name="MediaOverviewActivity_image">Imagine</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Apel Signal în curs</string>
   <string name="NotificationBarManager__establishing_signal_call">Se realizează un apel Signal</string>
