--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -78,9 +78,9 @@
   <string name="BucketedThreadMedia_Yesterday">Вчера</string>
   <string name="BucketedThreadMedia_This_week">На этой неделе</string>
   <string name="BucketedThreadMedia_This_month">В этом месяце</string>
-  <string name="BucketedThreadMedia_Large">Большой</string>
-  <string name="BucketedThreadMedia_Medium">Средний</string>
-  <string name="BucketedThreadMedia_Small">Маленький</string>
+  <string name="BucketedThreadMedia_Large">Большие</string>
+  <string name="BucketedThreadMedia_Medium">Средние</string>
+  <string name="BucketedThreadMedia_Small">Маленькие</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Входящий звонок</string>
   <!--CameraActivity-->
@@ -333,11 +333,7 @@
   <string name="DeviceListItem_last_active_s">Последняя активность %s</string>
   <string name="DeviceListItem_today">Сегодня</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Неизвестный файл</string>
   <string name="DocumentView_unnamed_file">Безымянный файл</string>
-  <string name="DocumentView_audio_file">Аудио-файл</string>
-  <string name="DocumentView_image_file">Изображение</string>
-  <string name="DocumentView_video_file">Видео-файл</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Режим без Служб Google Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Это устройство не поддерживает Службы Google Play. Нажмите для отключения оптимизации энергопотребления, которая не позволяет Signal получать сообщения, когда он неактивен.</string>
@@ -407,7 +403,7 @@
   <!--InviteActivity-->
   <string name="InviteActivity_share">Поделиться</string>
   <string name="InviteActivity_choose_contacts">Выбрать контакты</string>
-  <string name="InviteActivity_share_with_contacts">Поделиться с контактами</string>
+  <string name="InviteActivity_share_with_contacts">Выбрать контакты (SMS)</string>
   <string name="InviteActivity_choose_how_to_share">Выбрать, как поделиться</string>
   <string name="InviteActivity_cancel">Отмена</string>
   <string name="InviteActivity_sending">Отправляется…</string>
@@ -445,6 +441,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">Ошибка при чтении настроек MMS беспроводного провайдера</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Медиа</string>
+  <string name="MediaOverviewActivity_Files">Файлы</string>
+  <string name="MediaOverviewActivity_Audio">Аудио</string>
+  <string name="MediaOverviewActivity_All">Все</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
     <item quantity="one">Удалить выбранный элемент?</item>
     <item quantity="few">Удалить выбранные элементы?</item>
@@ -459,19 +458,24 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Удаление</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Удаляем сообщения…</string>
-  <string name="MediaOverviewActivity_Files">Файлы</string>
   <string name="MediaOverviewActivity_Select_all">Выбрать все</string>
   <string name="MediaOverviewActivity_collecting_attachments">Собираем вложения…</string>
-  <string name="MediaOverviewActivity_Audio">Аудио</string>
-  <string name="MediaOverviewActivity_All">Все</string>
   <string name="MediaOverviewActivity_Sort_by">Сортировка по</string>
   <string name="MediaOverviewActivity_Newest">Самые новые</string>
   <string name="MediaOverviewActivity_Oldest">Самые старые</string>
   <string name="MediaOverviewActivity_Storage_used">Использованное хранилище</string>
-  <string name="MediaOverviewActivity_All_storage_use">Всё использование хранилища</string>
+  <string name="MediaOverviewActivity_All_storage_use">Использование хранилища</string>
   <string name="MediaOverviewActivity_Grid_view_description">Вид: сетка</string>
   <string name="MediaOverviewActivity_List_view_description">Вид: список</string>
   <string name="MediaOverviewActivity_Selected_description">Выбрано</string>
+  <string name="MediaOverviewActivity_file">Файл</string>
+  <string name="MediaOverviewActivity_audio">Аудио</string>
+  <string name="MediaOverviewActivity_video">Видео</string>
+  <string name="MediaOverviewActivity_image">Изображение</string>
+  <string name="MediaOverviewActivity_sent_by_s">Отправил(-а) %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Отправили вы</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">Отправил(-а) %1$s в %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Отправили вы в %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Идёт звонок в Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Начинаем звонок в Signal</string>
