--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -333,11 +333,7 @@
   <string name="DeviceListItem_last_active_s">Zadnjič aktivna: %s</string>
   <string name="DeviceListItem_today">Danes</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Neznana datoteka</string>
   <string name="DocumentView_unnamed_file">Datoteka brez imena</string>
-  <string name="DocumentView_audio_file">Zvočna datoteka</string>
-  <string name="DocumentView_image_file">Slikovna datoteka</string>
-  <string name="DocumentView_video_file">Video datoteka</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimiziraj za manjkajočo aplikacijo Play Services</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Naprava ne podpira storitev Play Services. Tapnite za izklop optimizacije baterije, ki aplikaciji Signal preprečuje povezavo v času neaktivnosti naprave.</string>
@@ -445,6 +441,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">Napaka pri branju nastavitev MMS brezžičnega ponudnika</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Multimedija</string>
+  <string name="MediaOverviewActivity_Files">Datoteke</string>
+  <string name="MediaOverviewActivity_Audio">Zvok</string>
+  <string name="MediaOverviewActivity_All">Vse</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
     <item quantity="one">Izbris izbranega predmeta?</item>
     <item quantity="two">Izbris izbranih predmetov?</item>
@@ -459,11 +458,8 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Brišem</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Izbris sporočil …</string>
-  <string name="MediaOverviewActivity_Files">Datoteke</string>
   <string name="MediaOverviewActivity_Select_all">Označi vse</string>
   <string name="MediaOverviewActivity_collecting_attachments">Nabiranje prilog …</string>
-  <string name="MediaOverviewActivity_Audio">Zvok</string>
-  <string name="MediaOverviewActivity_All">Vse</string>
   <string name="MediaOverviewActivity_Sort_by">Razvrščanje po</string>
   <string name="MediaOverviewActivity_Newest">Najnovejših</string>
   <string name="MediaOverviewActivity_Oldest">Najstarejših</string>
@@ -472,6 +468,14 @@
   <string name="MediaOverviewActivity_Grid_view_description">Mrežni pogled</string>
   <string name="MediaOverviewActivity_List_view_description">Seznam</string>
   <string name="MediaOverviewActivity_Selected_description">Izbrano</string>
+  <string name="MediaOverviewActivity_file">Datoteka</string>
+  <string name="MediaOverviewActivity_audio">Zvok</string>
+  <string name="MediaOverviewActivity_video">Video</string>
+  <string name="MediaOverviewActivity_image">Slika</string>
+  <string name="MediaOverviewActivity_sent_by_s">Poslano od uporabnika %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Poslano od vas</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">Poslano od uporabnika %1$s za uporabnika %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Poslano od vas za uporabnika %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Klic Signal poteka</string>
   <string name="NotificationBarManager__establishing_signal_call">Vzpostavljam klic Signal</string>
