--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -304,11 +304,7 @@
   <string name="DeviceListItem_last_active_s">Aktiv së fundi %s</string>
   <string name="DeviceListItem_today">Sot</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Kartelë e panjohur</string>
   <string name="DocumentView_unnamed_file">Kartelë e paemërtuar</string>
-  <string name="DocumentView_audio_file">Kartelë audio</string>
-  <string name="DocumentView_image_file">Kartelë figurë</string>
-  <string name="DocumentView_video_file">Kartelë video</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Optimizoje për Shërbime Play që mungojnë</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Kjo pajisje nuk mbulon Shërbime Play. Prekeni që të çaktivizohen optimizime baterie sistemi të cilat e pengojnë Signal-in të marrë mesazhe teksa është joaktiv.</string>
@@ -412,6 +408,9 @@
   <string name="MmsDownloader_error_reading_mms_settings">Gabim në leximin e rregullimeve për MMS të furnizuesit të rrjetit pa fill</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Media</string>
+  <string name="MediaOverviewActivity_Files">Kartela</string>
+  <string name="MediaOverviewActivity_Audio">Audio</string>
+  <string name="MediaOverviewActivity_All">Krejt</string>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_title">
     <item quantity="one">Të fshihet objekti i përzgjedhur</item>
     <item quantity="other">Të fshihen objektet e përzgjedhur?</item>
@@ -422,11 +421,8 @@
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Po fshihet</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Po fshihen mesazhet…</string>
-  <string name="MediaOverviewActivity_Files">Kartela</string>
   <string name="MediaOverviewActivity_Select_all">Përzgjidhi krejt</string>
   <string name="MediaOverviewActivity_collecting_attachments">Po mblidhen bashkëngjitje…</string>
-  <string name="MediaOverviewActivity_Audio">Audio</string>
-  <string name="MediaOverviewActivity_All">Krejt</string>
   <string name="MediaOverviewActivity_Sort_by">Renditi sipas</string>
   <string name="MediaOverviewActivity_Newest">Më të rejave</string>
   <string name="MediaOverviewActivity_Oldest">Më të vjetrave</string>
@@ -435,6 +431,14 @@
   <string name="MediaOverviewActivity_Grid_view_description">Pamje rrjetë</string>
   <string name="MediaOverviewActivity_List_view_description">Pamje listë</string>
   <string name="MediaOverviewActivity_Selected_description">Të përzgjedhura</string>
+  <string name="MediaOverviewActivity_file">Kartelë</string>
+  <string name="MediaOverviewActivity_audio">Audio</string>
+  <string name="MediaOverviewActivity_video">Video</string>
+  <string name="MediaOverviewActivity_image">Figurë</string>
+  <string name="MediaOverviewActivity_sent_by_s">Dërguar nga %1$s</string>
+  <string name="MediaOverviewActivity_sent_by_you">Dërguar nga ju</string>
+  <string name="MediaOverviewActivity_sent_by_s_to_s">Dërguar nga %1$s për %2$s</string>
+  <string name="MediaOverviewActivity_sent_by_you_to_s">Dërguar nga ju për %1$s</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Thirrje Signal në zhvillim e sipër</string>
   <string name="NotificationBarManager__establishing_signal_call">Po bëhet thirrje Signal</string>
