--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -311,7 +311,6 @@
   <string name="DeviceListItem_last_active_s">Последња активност %s</string>
   <string name="DeviceListItem_today">Данас</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Непознат фајл</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Оптимизуј за недостајуће Плеј сервисе</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Овај уређај не подржава Плеј сервисе. Тапните да искључите системску оптимизацију потрошње батерије која спречава добављање порука док је Signal неактиван.</string>
@@ -411,11 +410,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">Грешка читања поставки ММС послужиоца</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Медији</string>
+  <string name="MediaOverviewActivity_Audio">Звук</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Брисање</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Брисање порука…</string>
   <string name="MediaOverviewActivity_Select_all">Изабери све</string>
   <string name="MediaOverviewActivity_collecting_attachments">Прикупљање прилога…</string>
-  <string name="MediaOverviewActivity_Audio">Звук</string>
+  <string name="MediaOverviewActivity_file">Фајл</string>
+  <string name="MediaOverviewActivity_audio">Звук</string>
+  <string name="MediaOverviewActivity_video">Видео</string>
+  <string name="MediaOverviewActivity_image">Слика</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Позив преко Signal-a у току</string>
   <string name="NotificationBarManager__establishing_signal_call">Успостављам Signal позив</string>
