--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -258,7 +258,6 @@
   <string name="DeviceListItem_last_active_s">mwisho hai 1%s</string>
   <string name="DeviceListItem_today">Leo</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Faili lisilojulikana</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Tengeneza kwa Huduma za kucheza zilizopo</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Kifaa hiki hachiunga mkono Huduma za kucheza. Gonga ili kuzuia uboreshaji wa betri ya mfumo ambayo inzuia Signal kutoka kurejesha ujumbe wakati haiwezekani.</string>
@@ -357,11 +356,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">kosa wakati wa kusoma mtoa huduma ya mipangilio ya wireless MMS </string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Midia</string>
+  <string name="MediaOverviewActivity_Audio">Sauti</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Inafutwa</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Kufuta meseji</string>
   <string name="MediaOverviewActivity_Select_all">Chagua vyote</string>
   <string name="MediaOverviewActivity_collecting_attachments">kukusanya viambatisho</string>
-  <string name="MediaOverviewActivity_Audio">Sauti</string>
+  <string name="MediaOverviewActivity_file">jalada</string>
+  <string name="MediaOverviewActivity_audio">Sauti</string>
+  <string name="MediaOverviewActivity_video">Video</string>
+  <string name="MediaOverviewActivity_image">picha</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">wito wa signal inaendelea</string>
   <string name="NotificationBarManager__establishing_signal_call">Kuanzisha wito wa signal</string>
