--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -306,7 +306,6 @@
   <string name="DeviceListItem_last_active_s">చివరి క్రియాశీల %s</string>
   <string name="DeviceListItem_today">నేడు</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">తెలియని దస్థ్రం</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">తప్పిపోయిన ప్లే సర్వీసులు కోసం ఆప్టిమైజ్</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">ఈ వస్తువు ఆట సేవలను సహకరించదు.
@@ -410,11 +409,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">వైర్లెస్ ప్రొవైడర్ ఎంఎంఎస్ సెట్టింగులను చదువుటలో దోషం</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">మీడియా</string>
+  <string name="MediaOverviewActivity_Audio">ఆడియో</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">తొలగిపోతున్నాయ్</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">సందేశాలను తొలగిస్తోంది …</string>
   <string name="MediaOverviewActivity_Select_all">అన్నీ ఎంచుకో</string>
   <string name="MediaOverviewActivity_collecting_attachments">జోడింపులను సేకరిస్తోంది …</string>
-  <string name="MediaOverviewActivity_Audio">ఆడియో</string>
+  <string name="MediaOverviewActivity_file">పత్రం</string>
+  <string name="MediaOverviewActivity_audio">ఆడియో</string>
+  <string name="MediaOverviewActivity_video">వీడియో</string>
+  <string name="MediaOverviewActivity_image">చిత్రం</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">పురోగతి లో Signal కాల్</string>
   <string name="NotificationBarManager__establishing_signal_call">స్థాపించబడుతున్న Signal కాల్</string>
