--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -300,7 +300,6 @@
   <string name="DeviceListItem_last_active_s">Остання активність %s</string>
   <string name="DeviceListItem_today">Сьогодні</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">Невідомий файл</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">Оптимізувати для випадку відсутності служб Google Play</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">Цей пристрій не підтримує служби Google Play. Торкніться, щоб вимкнути режим ощадливого споживання енергії Signal і отримувати повідомлення коли Signal працює у фоні.</string>
@@ -399,11 +398,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">Помилка читання налаштувань MMS провайдера</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">Медіа</string>
+  <string name="MediaOverviewActivity_Audio">Аудіо</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Видалення</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Видалення повідомлень…</string>
   <string name="MediaOverviewActivity_Select_all">Обрати все</string>
   <string name="MediaOverviewActivity_collecting_attachments">Збираю вкладення…</string>
-  <string name="MediaOverviewActivity_Audio">Аудіо</string>
+  <string name="MediaOverviewActivity_file">Файл</string>
+  <string name="MediaOverviewActivity_audio">Аудіо</string>
+  <string name="MediaOverviewActivity_video">Відео</string>
+  <string name="MediaOverviewActivity_image">Зображення</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Відбувається виклик Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Встановлення виклику Signal</string>
