--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -288,7 +288,6 @@
   <string name="DeviceListItem_last_active_s">最后活动  %s</string>
   <string name="DeviceListItem_today">今天</string>
   <!--DocumentView-->
-  <string name="DocumentView_unknown_file">未知文件</string>
   <!--DozeReminder-->
   <string name="DozeReminder_optimize_for_missing_play_services">对缺失的 Google Play服务进行优化</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">此设备不支持 Google Play 服务。点击以禁用系统电池优化以避免 Signal 无法收到新消息。</string>
@@ -388,11 +387,15 @@
   <string name="MmsDownloader_error_reading_mms_settings">读取运营商的彩信设定时出错</string>
   <!--MediaOverviewActivity-->
   <string name="MediaOverviewActivity_Media">媒体文件</string>
+  <string name="MediaOverviewActivity_Audio">音频</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">删除中</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">正在删除信息…</string>
   <string name="MediaOverviewActivity_Select_all">选择全部</string>
   <string name="MediaOverviewActivity_collecting_attachments">正在收集附件…</string>
-  <string name="MediaOverviewActivity_Audio">音频</string>
+  <string name="MediaOverviewActivity_file">文件</string>
+  <string name="MediaOverviewActivity_audio">音频</string>
+  <string name="MediaOverviewActivity_video">视频</string>
+  <string name="MediaOverviewActivity_image">图片</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">正在处理 Signal 呼叫</string>
   <string name="NotificationBarManager__establishing_signal_call">正在建立 Signal 呼叫</string>
